--- a/views/menu/index.ejs
+++ b/views/menu/index.ejs
@@ -99,9 +99,8 @@
             </li>
 
             <li class="nav-link" style="position: absolute; bottom: 0; width: 90%;">
-                <a href="../"><span class="fa fa-home"></span>&nbsp;Home</a>
+                <a href="http://thedamanclub.s3-website.ap-south-1.amazonaws.com/"><span class="fa fa-home"></span>&nbsp;Home</a>
             </li>
-
         </ul>
     </div>
 
